# echo

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTINUE.md  DEPLOY.md  DESKTOP.md  Dockerfile  FRAMES.md  LICENSE  P3.md  PLAN.md  README.md  ROADMAP.md  VPS.md  WHISPER.md  clips.js  digest.js  discovery.js  embeddings.js  fly.toml  frames.js  markdown.js  package-lock.json  package.json  playlistJob.js  providers.js  sanitize.js  server.js  sharepage.js  store.js  transcript.js  usage.js  usage_stats.mjs  usagelog.js  vault.js  websearch.js  whisper.js  whisperModel.js
public/: index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dist-shell/: loading.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: api.test.js  batchjob.test.js  channel-page.test.js  clips.test.js  desktop-mode.test.js  digest-helpers.test.js  follows.test.js  frames.test.js  library-ask.test.js  library-fts-query.test.js  markdown.test.js  parse-json-loose.test.js  playlistJob.test.js  provider-error-mapping.test.js  sanitize.test.js  saved-channel.test.js  share-routes.test.js  share-web-enabled.test.js  sharepage.test.js  store-listentries.test.js  store-shares-prune.test.js  store-shares.test.js  store-transcript-source.test.js  store.test.js  tags-suggest.test.js  tauri-bundle.test.js  transcript-error-classify.test.js  transcript.test.js  vault-sync.test.js  web-mode-gating.test.js  web-mode.test.js  websearch-resolvehref.test.js  whisper-model.test.js  whisper-resolve-model.test.js  (+1 more)
(+2 files in other folders)
